--- a/assets/custom_style.css
+++ b/assets/custom_style.css
@@ -182,6 +182,11 @@ input {
 
 .md-image {
     width: 900px;
+    height: 600px;
+}
+
+.md-tall-image {
+    width: 900px;
     height: 700px;
 }
 
