--- a/assets/custom_style.css
+++ b/assets/custom_style.css
@@ -132,9 +132,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  /*
-  color: rgb(50, 50, 50); }
-  */
+  color: white;
   background-color: rebeccapurple !important;
 }
 /*
@@ -178,6 +176,9 @@ input {
 .md-icon {
     width: 200px;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .md-image {
