--- a/assets/custom_style.css
+++ b/assets/custom_style.css
@@ -132,7 +132,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: white;
+  color: white !important;
   background-color: rebeccapurple !important;
 }
 /*
