--- a/assets/custom_style.css
+++ b/assets/custom_style.css
@@ -176,19 +176,28 @@ input {
 .md-icon {
     width: 200px;
     height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .md-image {
     width: 900px;
     height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .md-tall-image {
     width: 900px;
     height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#image-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .image-wrapper {
